@@ -1,28 +1,34 @@
 bin_PROGRAMS=kiwix-serve
-AM_CPPFLAGS=-I$(top_srcdir)/src/common -I$(top_srcdir)/src/zimlib/include -I$(top_srcdir)/src/ctpp2/include
+AM_CPPFLAGS=-I$(top_srcdir)/src/common -I$(top_srcdir)/src/zimlib/include -I$(top_srcdir)/src/ctpp2/include -I$(top_srcdir)/src/pugixml
 kiwix_serve_SOURCES= \
 	kiwix-serve.cpp \
 	../common/kiwix/reader.cpp \
 	../common/kiwix/searcher.cpp \
+	../common/kiwix/manager.cpp \
+	../common/kiwix/library.cpp \
 	../common/kiwix/xapianSearcher.cpp \
 	../common/kiwix/cluceneSearcher.cpp \
 	../common/unaccent.cpp \
+	../common/base64.cpp \
 	../common/pathTools.cpp \
 	../common/regexTools.cpp \
 	../common/splitString.cpp 
 include_HEADERS= \
 	../common/kiwix/reader.h \
 	../common/kiwix/searcher.h \
+	../common/kiwix/manager.h \
+	../common/kiwix/library.h \
 	../common/kiwix/xapianSearcher.h \
 	../common/kiwix/cluceneSearcher.h \
 	../common/unaccent.h \
+	../common/base64.h \
 	../common/pathTools.h \
 	../common/regexTools.h \
 	../common/splitString.cpp 
-kiwix_serve_CXXFLAGS=${LIBMICROHTTPD_CFLAGS} $(LIBCTPP2_CFLAGS) $(LIBCLUCENE_CFLAGS) $(LIBXAPIAN_CFLAGS) $(LIBICU_CFLAGS) $(LIBZIM_CFLAGS) -I../common/
+kiwix_serve_CXXFLAGS=${LIBMICROHTTPD_CFLAGS} $(LIBPUGIXML_CFLAGS) $(LIBCTPP2_CFLAGS) $(LIBCLUCENE_CFLAGS) $(LIBXAPIAN_CFLAGS) $(LIBICU_CFLAGS) $(LIBZIM_CFLAGS) -I../common/
 if IS_STATIC
-kiwix_serve_LDFLAGS= -ldl -lm -lpthread -luuid ${LIBMICROHTTPD_STATIC_LDFLAGS} $(LIBCTPP2_STATIC_LDFLAGS) $(LIBCLUCENE_STATIC_LDFLAGS) $(LIBXAPIAN_STATIC_LDFLAGS) $(LIBICU_STATIC_LDFLAGS) $(LIBZIMSELF_STATIC_LDFLAGS) $(LIBLZMA_STATIC_LDFLAGS) $(LIBZ_STATIC_LDFLAGS)
+kiwix_serve_LDFLAGS= -ldl -lm -lpthread -luuid ${LIBMICROHTTPD_STATIC_LDFLAGS} ${LIBPUGIXML_STATIC_LDFLAGS} $(LIBCTPP2_STATIC_LDFLAGS) $(LIBCLUCENE_STATIC_LDFLAGS) $(LIBXAPIAN_STATIC_LDFLAGS) $(LIBICU_STATIC_LDFLAGS) $(LIBZIMSELF_STATIC_LDFLAGS) $(LIBLZMA_STATIC_LDFLAGS) $(LIBZ_STATIC_LDFLAGS)
 else
-kiwix_serve_LDFLAGS=${LIBMICROHTTPD_LDFLAGS} $(LIBCTPP2_LDLAGS) $(LIBCLUCENE_LDFLAGS) $(LIBXAPIAN_LDFLAGS) $(LIBICU_LDFLAGS) $(LIBZIM_LDFLAGS)
+kiwix_serve_LDFLAGS=${LIBMICROHTTPD_LDFLAGS} $(LIBPUGIXML_LDLAGS) $(LIBCTPP2_LDLAGS) $(LIBCLUCENE_LDFLAGS) $(LIBXAPIAN_LDFLAGS) $(LIBICU_LDFLAGS) $(LIBZIM_LDFLAGS)
 endif
-kiwix_serve_LDADD=../zimlib/src/.libs/libzim.a ../ctpp2/src/.libs/libctpp2.a
+kiwix_serve_LDADD=../zimlib/src/.libs/libzim.a ../ctpp2/src/.libs/libctpp2.a ../pugixml/.libs/libpugixml.a
